Added Patrol command Added Database to store patrol data Added tasks Added task to save patrol data Improved Config.java layout